--- a/routine.html
+++ b/routine.html
@@ -37,12 +37,12 @@
 
         <label for="daySelect">Choose a Day:</label>
         <select id="daySelect" name="daySelect">
-            <option value="monday">Monday</option>
-            <option value="tuesday">Tuesday</option>
-            <option value="wednesday">Wednesday</option>
-            <option value="thursday">Thursday</option>
-            <option value="friday">Friday</option>
-            <option value="saturday">Saturday</option>
+            <option value="Monday">Monday</option>
+            <option value="Tuesday">Tuesday</option>
+            <option value="Wednesday">Wednesday</option>
+            <option value="Thursday">Thursday</option>
+            <option value="Friday">Friday</option>
+            <option value="Saturday">Saturday</option>
         </select>
 
         <input type="submit" value="Submit">
@@ -120,7 +120,7 @@
             var selectedDay = document.getElementById("daySelect").value;
 
             // Convert selectedType to uppercase and construct the image source
-            var imageSource = "timetable/" + selectedType.toUpperCase() + "_" + selectedDay + "_" + currentIndex + ".JPG";
+            var imageSource = "timetable/" + selectedType + "_" + selectedDay + "_" + currentIndex + ".JPG";
 
             // Update the image source
             document.getElementById("selectedImage").src = imageSource;
