--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>College Notes - Home</title>
+    <title>Campus Notes - Home</title>
     <link rel="stylesheet" href="index.css">
 
 </head>
@@ -12,7 +12,7 @@
 <body>
 
     <header>
-        <h1>College Notes</h1>
+        <h1>Campus Notes</h1>
         <nav>
             <a href="about.html">About Us</a>
             <a href=mailto:<nowiki thetechnocrat100@email.com>feedback</nowiki></a>
@@ -21,17 +21,16 @@
     </header>
 
     <section class="main-content">
-        <h2>Welcome to College Notes!</h2>
+        <h2>Welcome to Campus Notes!</h2>
 
         <div class="announcement">
             <h3>Recent Announcements</h3>
             <p>Stay updated with the latest news and announcements from the college.</p>
-            <p><strong>Important:</strong> The mid-term exams have been rescheduled. Check the updated timetable.</p>
+            <p><strong>Important:</strong> more details will be uploaded soon, so be tuned.</p>
         </div>
 
-        <p>Explore and manage your college experience with College Notes. Use the navigation above to access class
-            routines,
-            notes, question banks, and solutions.</p>
+        <p>Explore and manage your college experience with Campus Notes. Use the navigation above to access class
+            routines, give feedback's and to know about us.</p>
 
         <h3>Quick Links</h3>
         <ul>
@@ -40,6 +39,7 @@
             <li><a href="soon.html">Question Bank</a></li>
             <li><a href="soon.html">Solutions</a></li>
             <li><a href="syllabus.html">Syllabus</a></li>
+            <li><a href="star.html">Star Batch Content</a></li>
         </ul>
     </section>
 
