--- a/syllabus.html
+++ b/syllabus.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>College Notes - Question Bank</title>
+    <title>Campus Notes - Syllabus</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         /* Additional styles if needed */
@@ -51,7 +51,8 @@
             <a href="https://drive.google.com/file/d/19siX_cLcb8f5gh_MfHOp2jY-WO6uihEe/view?usp=share_link"
                 target="_blank">
                 <h3> Fundamentals of Computer Science using Python-1</h3>
-                <p>Another question content goes here. Customize it as needed.</p>
+                <p>With a little effort, you can learn the basics of computer science and start programming in Python.
+                </p>
             </a>
         </div>
 
@@ -60,15 +61,15 @@
             <a href="https://drive.google.com/file/d/19sS_Eyfft2VrKvQ04kXHVX6UMlGZ7DTV/view?usp=share_link"
                 target="_blank">
                 <h3>Full Stack Development with Javascript-1</h3>
-                <p>Another question content goes here. Customize it as needed.</p>
+                <p>A person who can develop both client and server software.</p>
             </a>
         </div>
 
         <div class="question">
             <a href="https://drive.google.com/file/d/19zqglKFg5tiRoWs69gLi4oT0aazHwpZj/view?usp=share_link"
                 target="_blank">
-                <h3>Introduction to Probability Theory and Stocastic Processes</h3>
-                <p>Another question content goes here. Customize it as needed.</p>
+                <h3>Introduction to Probability Theory and Stochastic Processes</h3>
+                <p>Stochastic processes are probabilistic models for random quantities evolving in time or space.</p>
             </a>
         </div>
 
@@ -76,7 +77,7 @@
             <a href="https://drive.google.com/file/d/19xOSqXUS94Try-ZfZBGlzUAyzlYntW7a/view?usp=share_link"
                 target="_blank">
                 <h3>Effective Technical Communication</h3>
-                <p>Another question content goes here. Customize it as needed.</p>
+                <p>Good technical communication is accurate, clear, concise, coherent, and appropriate.</p>
             </a>
 
         </div>
@@ -85,7 +86,7 @@
             <a href="https://drive.google.com/file/d/19wcAxM8X6UbBUc9Ywxo-9Pb40Wuszusv/view?usp=share_link"
                 target="_blank">
                 <h3>Digital Electronics</h3>
-                <p>Another question content goes here. Customize it as needed.</p>
+                <p>The study of electronic circuits that process and control digital signals.</p>
             </a>
 
         </div>
@@ -94,7 +95,7 @@
             <a href="https://drive.google.com/file/d/19yewLarmKyv2XvNpy330SKIkfB1pmw59/view?usp=share_link"
                 target="_blank">
                 <h3>Constitution of India</h3>
-                <p>Another question content goes here. Customize it as needed.</p>
+                <p>The Constitution of India is the supreme law of India.</p>
             </a>
 
         </div>
