--- a/about.html
+++ b/about.html
@@ -60,10 +60,10 @@
 <body>
 
     <header>
-        <h1>College Notes</h1>
+        <h1>Campus Notes</h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="index.html">Contact</a>
+            <a href=mailto:<nowiki thetechnocrat100@email.com>feedback</nowiki></a>
         </nav>
     </header>
 
