--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <h1>Campus Notes</h1>
         <nav>
             <a href="about.html">About Us</a>
-            <a href=mailto:<nowiki thetechnocrat100@email.com>feedback</nowiki></a>
-            <a href="routine.html">Class Routine</a>
+            <a href="mailto:thetechnocrat100@gmail.com">feedback</a>
+            <a href="routine.html">Routine</a>
         </nav>
     </header>
 
