--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
         <h1>Campus Notes</h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href=mailto:<nowiki thetechnocrat100@email.com>feedback</nowiki></a>
+            <a href="mailto:thetechnocrat100@gmail.com">feedback</a>
         </nav>
     </header>
 
@@ -100,7 +100,8 @@
 
         <section class="contact">
             <h2>Contact Us</h2>
-            <p>Feel free to reach out to us at <a href=mailto:<nowiki>thetechnocrat100@email.com</nowiki></a></p>
+            <p>Feel free to reach out to us at <a
+                    href="mailto:thetechnocrat100@gmail.com">thetechnocrat100@gmail.com</a></p>
 
             <!-- <p>Follow us on social media:
                 <a href="https://twitter.com/your_twitter" target="_blank">Twitter</a>,
