--- a/routine.html
+++ b/routine.html
@@ -20,7 +20,7 @@
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
-        <a href=mailto:<nowiki thetechnocrat100@email.com>feedback</nowiki></a>
+        <a href="mailto:thetechnocrat100@gmail.com">feedback</a>
     </nav>
 
     <form id="myForm" onsubmit="displayImage(); return false;">
