--- a/syllabus.html
+++ b/syllabus.html
@@ -39,7 +39,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
-            <a href=mailto:<nowiki thetechnocrat100@email.com>feedback</nowiki></a>
+            <a href="mailto:thetechnocrat100@gmail.com">feedback</a>
         </nav>
     </header>
 
