--- a/routine.html
+++ b/routine.html
@@ -20,11 +20,10 @@
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
-        <a href=mailto:<nowiki thetechnocrat100@email.com>feedback</nowiki></a>
+        <a href="mailto:thetechnocrat100@email.com">feedback</a>
     </nav>
 
-    <form id="myForm" onsubmit="displayImage(); return false;">
-
+    <form id="myForm">
         <label for="sySelect">Choose Department:</label>
         <select id="sySelect" name="sySelect" onchange="updateTypeOptions()">
             <option value="sy1">SY1</option>
@@ -37,6 +36,7 @@
 
         <label for="daySelect">Choose a Day:</label>
         <select id="daySelect" name="daySelect">
+           
             <option value="monday">Monday</option>
             <option value="tuesday">Tuesday</option>
             <option value="wednesday">Wednesday</option>
@@ -45,7 +45,7 @@
             <option value="saturday">Saturday</option>
         </select>
 
-        <input type="submit" value="Submit">
+        <!-- Remove the "Submit" button -->
     </form>
 
     <!-- Display the image based on the selections -->
@@ -120,7 +120,7 @@
             var selectedDay = document.getElementById("daySelect").value;
 
             // Convert selectedType to uppercase and construct the image source
-            var imageSource ="timetable/"+ selectedType + "_" + selectedDay + "_" + currentIndex + ".jpg";
+            var imageSource = "timetable/" + selectedType + "_" + selectedDay + "_" + currentIndex + ".jpg";
 
             // Update the image source
             document.getElementById("selectedImage").src = imageSource;
@@ -167,12 +167,38 @@
             displayImage();
         }
 
+        // Function to set the selected day based on the current date
+        function setDayBasedOnCurrentDate() {
+            var daySelect = document.getElementById("daySelect");
+            var days = ['sunday', 'monday', 'tuesday', 'wednesday', 'thursday', 'friday', 'saturday'];
+            var currentDate = new Date();
+            var currentDay = days[currentDate.getDay()]; // Get the current day (e.g., "tuesday")
+
+            // Set the selected day option based on the current day
+            for (var i = 0; i < daySelect.options.length; i++) {
+                if (daySelect.options[i].value === currentDay) {
+                    daySelect.selectedIndex = i;
+                    break;
+                }
+            }
+
+            // Update the image based on the current day
+            displayImage();
+        }
+
         // Call the function to initialize the options based on the default selection
         updateTypeOptions();
+
+        // Add event listeners to update the image when the user selects different options
+        document.getElementById("sySelect").addEventListener("change", updateTypeOptions);
+        document.getElementById("typeSelect").addEventListener("change", displayImage);
+        document.getElementById("daySelect").addEventListener("change", displayImage);
+
+        // Call the function to set the selected day when the page loads
+        window.onload = setDayBasedOnCurrentDate;
     </script>
     <footer>
-        <!-- <p>&copy; 2023 College Notes. All rights reserved.</p> -->
-        <a style="color: white;" href="rights.html" All rights reserved target="_blank">
+        <a style="color: white;" href="rights.html" target="_blank">
             <p>&copy; 2023 College Notes. All rights reserved.</p>
         </a>
     </footer>
