Added Google Tags

--- a/routine.html
+++ b/routine.html
@@ -193,6 +193,15 @@
         // Call the function to set the selected day when the page loads
         window.onload = setDayBasedOnCurrentDate;
     </script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LVTVE8ENYD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LVTVE8ENYD');
+</script>
     <footer>
         <a style="color: white;" href="rights.html" target="_blank">
             <p>&copy; 2023 College Notes. All rights reserved.</p>
