--- a/soon.html
+++ b/soon.html
@@ -47,7 +47,15 @@
 
     <h1>Uploaded Soon</h1>
     <p>We're in the process of uploading something exciting. Stay tuned!</p>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LVTVE8ENYD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-LVTVE8ENYD');
+</script>
 </body>
 
 </html>
