--- a/qbsolution.html
+++ b/qbsolution.html
@@ -104,7 +104,15 @@
             console.log('Question clicked:', questionId);
         }
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LVTVE8ENYD"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
+        gtag('config', 'G-LVTVE8ENYD');
+    </script>
 </body>
 
 </html>
