--- a/subject.html
+++ b/subject.html
@@ -127,7 +127,15 @@
     <footer>
         <p>&copy; 2023 College Notes. All rights reserved.</p>
     </footer>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LVTVE8ENYD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-LVTVE8ENYD');
+</script>
     <script>
         function showNoteContent(noteId) {
             var noteContentContainer = document.getElementById("noteContentContainer");
