--- a/syllabus.html
+++ b/syllabus.html
@@ -110,7 +110,15 @@
             <p>&copy; 2023 College Notes. All rights reserved.</p>
         </a>
     </footer>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LVTVE8ENYD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-LVTVE8ENYD');
+</script>
     <script>
         function showQuestionContent(questionId) {
             // Your logic to handle the click event
