Title edit.html

--- a/routine.html
+++ b/routine.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fiscal Year Selection</title>
+    <title> Class Schedule </title>
     <link rel="stylesheet" href="routine.css">
     <style>
         /* Your existing styles here */
