--- a/about.html
+++ b/about.html
@@ -56,15 +56,6 @@
         }
     </style>
 </head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-LVTVE8ENYD"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-LVTVE8ENYD');
-</script>
 
 <body>
 
@@ -97,10 +88,23 @@
             <dl>
                 <dt><b>Pathan Sibten</b>
                 <dd>Coder and the designer of the website</dd>
+                <dd><a href="https://www.linkedin.com/in/sibten-pathan-98a340244?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                        target="_blank">
+                        <img style="height: 25px;"
+                            src="https://img.freepik.com/premium-vector/linkedin-logo_578229-227.jpg"
+                            alt="LinkedIn Profile">
+                    </a>
+                </dd>
                 </dt>
                 <dt><b>Kuntar Divyang</b>
                 <dd>
                     Backend management and hosting the website
+                <dd><a href="https://www.linkedin.com/in/kuntardivyang?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                        target="_blank">
+                        <img style="height: 25px;"
+                            src="https://img.freepik.com/premium-vector/linkedin-logo_578229-227.jpg"
+                            alt="LinkedIn Profile">
+                    </a></dd>
                 </dd>
                 </dt>
             </dl>
@@ -112,11 +116,11 @@
             <p>Feel free to reach out to us at <a
                     href="mailto:thetechnocrat100@gmail.com">thetechnocrat100@gmail.com</a></p>
 
-            <!-- <p>Follow us on social media:
-                <a href="https://twitter.com/your_twitter" target="_blank">Twitter</a>,
-                <a href="https://facebook.com/your_facebook" target="_blank">Facebook</a>,
-                <a href="https://instagram.com/your_instagram" target="_blank">Instagram</a>
-            </p> -->
+            <p>Follow us on social media:
+                <a href="https://telegram.me/+3Hcp98YcCiBjNTM9" target="_blank">telegram</a>,
+                <a href="https://whatsapp.com/channel/0029Va93FUuHFxOzrkR4cM0I" target="_blank">WhatsApp channel</a>
+                <!-- <a href="https://instagram.com/your_instagram" target="_blank">Instagram</a> -->
+            </p>
         </section>
 
     </div>
@@ -126,7 +130,6 @@
             <p>&copy; 2023 College Notes. All rights reserved.</p>
         </a>
     </footer>
-
 </body>
 
 </html>
