--- a/qb.html
+++ b/qb.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>College Notes - Question Bank</title>
+    <title>Campus Notes - Question Bank</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         /* Additional styles if needed */
@@ -31,15 +31,6 @@
         }
     </style>
 </head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-LVTVE8ENYD"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-LVTVE8ENYD');
-</script>
 
 <body>
 
@@ -47,8 +38,8 @@
         <h1>College Notes</h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="index.html">About Us</a>
-            <a href="index.html">Contact</a>
+            <a href="about.html">About Us</a>
+            <a href="mailto:thetechnocrat100@gmail.com">feedback</a>
         </nav>
     </header>
 
@@ -57,45 +48,49 @@
 
         <!-- Question 1 -->
         <div class="question">
-            <a href="#" onclick="showQuestionContent('question1')">
+            <a href="https://drive.google.com/file/d/1Fe0jd3XIF2hdKX-jSnph-INzja9PLFKR/view?usp=sharing"
+                target="_blank">
                 <h3>Fundamentals of Computer Science using Python-1</h3>
-                <p>This is the content of the question. You can add your text, images, and other elements here.</p>
+                <p></p>
             </a>
         </div>
 
         <!-- Question 2 -->
         <div class="question">
-            <a href="#" onclick="showQuestionContent('question2')">
+            <a href="https://drive.google.com/file/d/1Fc9jUPiYcx5HYSyZLgEzjs76jWUAYM-5/view?usp=sharing"
+                target="_blank">
                 <h3>Full Stack Development with Javascript-1</h3>
-                <p>Another question content goes here. Customize it as needed.</p>
+                <p></p>
             </a>
         </div>
 
         <div class="question">
-            <a href="#" onclick="showQuestionContent('question2')">
+            <a href="https://drive.google.com/file/d/1FZLUfiL6NNWC75dlSuFwHmdxdokIdCT2/view?usp=sharing"
+                target="_blank">
                 <h3>Introduction to Probability Theory and Stocastic Processes</h3>
-                <p>Another question content goes here. Customize it as needed.</p>
+                <p></p>
             </a>
         </div>
 
         <div class="question">
-            <a href="#" onclick="showQuestionContent('question2')">
+            <a href="#">
                 <h3>Effective Technical Communication</h3>
-                <p>Another question content goes here. Customize it as needed.</p>
+                <p>Uploaded Soon.</p>
             </a>
         </div>
 
         <div class="question">
-            <a href="#" onclick="showQuestionContent('question2')">
+            <a href="https://drive.google.com/file/d/1FamEAL1-Lx8jK-Q_YHEt-BV38_81klai/view?usp=sharing"
+                target="_blank">
                 <h3>Digital Electronics</h3>
-                <p>Another question content goes here. Customize it as needed.</p>
+                <p></p>
             </a>
         </div>
 
         <div class="question">
-            <a href="#" onclick="showQuestionContent('question2')">
+            <a href="#">
                 <h3>Constitution of India</h3>
-                <p>Another question content goes here. Customize it as needed.</p>
+                <p>Uploaded Soon.</p>
             </a>
         </div>
 
@@ -106,13 +101,6 @@
     <footer>
         <p>&copy; 2023 College Notes. All rights reserved.</p>
     </footer>
-
-    <script>
-        function showQuestionContent(questionId) {
-            // Your logic to handle the click event
-            console.log('Question clicked:', questionId);
-        }
-    </script>
 
 </body>
 
