--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <ul>
             <li><a href="routine.html">Class Routine Checker</a></li>
             <li><a href="soon.html">Notes</a></li>
-            <li><a href="soon.html">Question Bank</a></li>
+            <li><a href="qb.html">Question Bank</a></li>
             <li><a href="soon.html">Solutions</a></li>
             <li><a href="syllabus.html">Syllabus</a></li>
             <li><a href="star.html">Star Batch Content</a></li>
