--- a/notes.html
+++ b/notes.html
@@ -4,21 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>College Notes - Notes</title>
-    <link rel="stylesheet" href="notes.css">
+    <title>Campus Notes - Notes</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
         /* Additional styles if needed */
+        .question {
+            margin-bottom: 20px;
+            padding: 15px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+
+        .question a {
+            text-decoration: none;
+            color: inherit;
+            /* Inherit text color from parent */
+        }
+
+        .question h3 {
+            color: #007bff;
+            margin-bottom: 10px;
+        }
+
+        .question p {
+            margin: 0;
+        }
     </style>
 </head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-LVTVE8ENYD"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-LVTVE8ENYD');
-</script>
 
 <body>
 
@@ -26,24 +38,58 @@
         <h1>College Notes</h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="index.html">About Us</a>
-            <a href="index.html">Contact</a>
+            <a href="about.html">About Us</a>
+            <a href="mailto:thetechnocrat100@gmail.com">feedback</a>
         </nav>
     </header>
 
     <section class="main-content">
-        <h2>Subjects</h2>
+        <h2>Notes</h2>
 
-        <!-- Display subjects as links -->
-        <div class="subject-links">
-            <a href="subject.html?subject=FCSP-1">Fundamentals of Computer Science using Python-1</a>
-            <a href="subject.html?subject=FSD-1">Full Stack Development with Javascript-1</a>
-            <a href="subject.html?subject=PS">Introduction to Probability Theory and Stocastic Processes</a>
-            <a href="subject.html?subject=ETC">Effective Technical Communication</a>
-            <a href="subject.html?subject=DE">Digital Electronics</a>
-            <a href="subject.html?subject=CI">Constitution of India</a>
-            <!-- Add more subjects as needed -->
+        <div class="question">
+            <a href="#">
+                <h3>Fundamentals of Computer Science using Python-1</h3>
+                <p>Uploaded Soon.</p>
+            </a>
         </div>
+
+        <div class="question">
+            <a href="#">
+                <h3>Full Stack Development with Javascript-1</h3>
+                <p>Uploaded Soon.</p>
+            </a>
+        </div>
+
+        <div class="question">
+            <a href="https://drive.google.com/drive/folders/1LmxnCuTSsNUynuZJIwxeEdFkZTFoS5jI?usp=sharing"
+                target="_blank">
+                <h3>Introduction to Probability Theory and Stocastic Processes</h3>
+                <p></p>
+            </a>
+        </div>
+
+        <div class="question">
+            <a href="#">
+                <h3>Effective Technical Communication</h3>
+                <p>Uploaded Soon.</p>
+            </a>
+        </div>
+
+        <div class="question">
+            <a href="#">
+                <h3>Digital Electronics</h3>
+                <p>Uploaded Soon.</p>
+            </a>
+        </div>
+
+        <div class="question">
+            <a href="#">
+                <h3>Constitution of India</h3>
+                <p>Uploaded Soon.</p>
+            </a>
+        </div>
+
+        <!-- Add more questions as needed -->
 
     </section>
 
