--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         <h3>Quick Links</h3>
         <ul>
             <li><a href="routine.html">Class Routine Checker</a></li>
-            <li><a href="soon.html">Notes</a></li>
+            <li><a href="notes.html">Notes</a></li>
             <li><a href="qb.html">Question Bank</a></li>
-            <li><a href="soon.html">Solutions</a></li>
+            <li><a href="qbsolution.html">Solutions</a></li>
             <li><a href="syllabus.html">Syllabus</a></li>
             <li><a href="star.html">Star Batch Content</a></li>
         </ul>
