--- a/notes.html
+++ b/notes.html
@@ -35,7 +35,7 @@
 <body>
 
     <header>
-        <h1>College Notes</h1>
+        <h1>Campus Notes</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
